--- a/Dockerfile.dummyserver
+++ b/Dockerfile.dummyserver
@@ -1,9 +1,12 @@
+# --- build application
 FROM golang:1.14 AS builder
 WORKDIR /temp
 COPY . .
 RUN make server
 
+# --- create image
 FROM ubuntu:20.04
+
 WORKDIR /usr/bin
 COPY --from=builder /temp/build/dummyserver .
 
