--- a/Dockerfile.goloba
+++ b/Dockerfile.goloba
@@ -1,17 +1,17 @@
+# --- build application
 FROM golang:1.14 AS builder
 WORKDIR /temp
 COPY . .
 RUN make goloba
 
+# --- create image
 FROM ubuntu:20.04
 
 WORKDIR /usr/bin
 COPY --from=builder /temp/build/goloba .
 
-VOLUME [ "/var/log/goloba" ]
-
 EXPOSE 8000
 
 ENV GOLOBA_PORT=8000 GOLOBA_TARGETS="dummy1:9001;dummy2:9002"
 
-CMD [ "/usr/bin/goloba","-l","/var/log/goloba/glb.log" ]
+CMD [ "/usr/bin/goloba","-log--stdout" ]
