Docker files update for dummyserver
Changes:
- proper usage of environmet variables added
to dummyserver Dockerfile and other related files

--- a/dockerhub/Dockerfile.dummyserver-amd64
+++ b/dockerhub/Dockerfile.dummyserver-amd64
@@ -13,5 +13,6 @@ COPY --from=builder /temp/build/dummyserver .
 EXPOSE 9001
 
 ENV DUMMY_PORT=9001
+ENV DUMMY_MESSAGE="DummyServer in Docker"
 
 CMD [ "/usr/bin/dummyserver" ]
