--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
             dockerfile: Dockerfile.goloba
         environment:
             - GOLOBA_PORT=8000
-            - GOLOBA_TARGETS="dummy.server1:8080;dummy.server2:8080"
+            - GOLOBA_TARGETS="dummy.server1:9001;dummy.server2:9002"
         networks:
             - glbtesting
         ports:
@@ -23,6 +23,9 @@ services:
         build:
             context: .
             dockerfile: Dockerfile.dummyserver
+        environment:
+            - DUMMY_PORT=9001
+            - DUMMY_MESSAGE="Hi there from server1"
         networks:
             - glbtesting
 
@@ -30,7 +33,10 @@ services:
         image: markamdev/dummyserver
         build:
             context: .
-            dockerfile: Dockerfile.server
+            dockerfile: Dockerfile.dummyserver
+        environment:
+            - DUMMY_PORT=9002
+            - DUMMY_MESSAGE="Hi there from server2"
         networks:
             - glbtesting
 
