New way of flags and env vars handling

--- a/Dockerfile.dummyserver
+++ b/Dockerfile.dummyserver
@@ -12,7 +12,7 @@ COPY --from=builder /temp/build/dummyserver .
 
 EXPOSE 9001
 
-ENV DUMMY_PORT=9001
-ENV DUMMY_MESSAGE="DummyServer in Docker"
+ENV PORT=9001
+ENV MESSAGE="DummyServer in Docker"
 
 CMD [ "/usr/bin/dummyserver" ]
